fix z-index sublist

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -242,10 +242,15 @@
       }
     }
     @media (min-width: $mobile) {
-      &.open-sublist .menu__sublist {
-        top: calc(100% + 5px);
-        opacity: 1;
-        visibility: visible;
+      &.open-sublist {
+        .menu__arrow {
+          transform: rotate(180deg);
+        }
+        .menu__sublist {
+          top: calc(100% + 5px);
+          opacity: 1;
+          visibility: visible;
+        }
       }
     }
   }
@@ -327,6 +332,7 @@
       opacity: 0;
       visibility: hidden;
       transition: all 0.3s ease 0s;
+      z-index: 3;
     }
     @media (max-width: $mobile) {
       padding-left: rem(10);
